// Generated by sylk.build, DO NOT EDIT.
syntax = "proto3";
package sylklabs.Todos.v1;

service TaskService {
	// [Todos.v1.TaskService.GetTask] - 
	rpc GetTask (sylklabs.Todos.v1.TaskId) returns (sylklabs.Todos.v1.Task);
}


// [sylklabs.Todos.v1.Task] - 
message Task {
	// [sylklabs.Todos.v1.Task.id] - 
	string id = 1;
	// [sylklabs.Todos.v1.Task.title] - 
	string title = 2;
	// [sylklabs.Todos.v1.Task.description] - 
	string description = 3;
	// [sylklabs.Todos.v1.Task.done] - 
	bool done = 4;
}

// [sylklabs.Todos.v1.TaskId] - 
message TaskId {
	// [sylklabs.Todos.v1.TaskId.id] - 
	string id = 1;
}